add '<script src=../dist/bundle.js></script>' back to file

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
         <noscript>
             You need to enable JavaScript to run this app.
         </noscript>
-         <!--react app-->
+        <script src="../dist/bundle.js"></script> <!--react app-->
     </body>
 </html>
